// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles errors during migration gracefully 1`] = `[error: division by zero]`;

exports[`handles errors during migration gracefully 2`] = `
"
[31m[1m🛑 Error occurred whilst processing migration[22m[39m
    error: division by zero
        at ~/node_modules/pg/lib/client.js:[LINE]:[COL]
        at processTicksAndRejections (node:internal/process/task_queues:[LINE]:[COL])
        at runQueryWithErrorInstrumentation (~/src/instrumentation.ts:[LINE]:[COL])
        at ~/src/migration.ts:[LINE]:[COL]
        at withAdvisoryLock (~/src/pgReal.ts:[LINE]:[COL])
        at runCommittedMigration (~/src/migration.ts:[LINE]:[COL])
        at ~/src/commands/migrate.ts:[LINE]:[COL]
        at withAdvisoryLock (~/src/pgReal.ts:[LINE]:[COL])
        at ~/src/commands/migrate.ts:[LINE]:[COL]
        at withClient (~/src/pgReal.ts:[LINE]:[COL])
        at _migrate (~/src/commands/migrate.ts:[LINE]:[COL])
        at Object.<anonymous> (~/__tests__/migrate.test.ts:[LINE]:[COL])

    Severity:	ERROR
    Code:    	22012
,[object Object]"
`;

exports[`refuses to run migration with invalid hash 1`] = `"Hash for 000002.sql does not match - sha1:cbed240dda7dfa510ff785783bbe6af7743b3a11 !== sha1:bddc1ead3310dc1c42cdc7f63537ebdff2e9fd7b; has the file been tampered with?"`;

exports[`runs migrations 1`] = `
[
  {
    "filename": "000001.sql",
    "hash": "sha1:e00ec93314a423ee5cc68d1182ad52f16442d7df",
    "previous_hash": null,
  },
  {
    "filename": "000002.sql",
    "hash": "sha1:bddc1ead3310dc1c42cdc7f63537ebdff2e9fd7b",
    "previous_hash": "sha1:e00ec93314a423ee5cc68d1182ad52f16442d7df",
  },
]
`;

exports[`runs migrations 2`] = `
[
  "foo",
]
`;

exports[`runs migrations 3`] = `
[
  {
    "typname": "user_role",
    "value_count": "1",
  },
]
`;

exports[`runs migrations 4`] = `
[
  {
    "filename": "000001.sql",
    "hash": "sha1:e00ec93314a423ee5cc68d1182ad52f16442d7df",
    "previous_hash": null,
  },
  {
    "filename": "000002.sql",
    "hash": "sha1:bddc1ead3310dc1c42cdc7f63537ebdff2e9fd7b",
    "previous_hash": "sha1:e00ec93314a423ee5cc68d1182ad52f16442d7df",
  },
  {
    "filename": "000003.sql",
    "hash": "sha1:2d248344ac299ebbad2aeba5bfec2ae3c3cb0a4f",
    "previous_hash": "sha1:bddc1ead3310dc1c42cdc7f63537ebdff2e9fd7b",
  },
]
`;

exports[`runs migrations 5`] = `
[
  "foo",
]
`;

exports[`runs migrations 6`] = `
[
  {
    "typname": "user_role",
    "value_count": "2",
  },
]
`;

exports[`will run a migration with invalid hash if told to do so 1`] = `
[
  {
    "filename": "000001.sql",
    "hash": "sha1:e00ec93314a423ee5cc68d1182ad52f16442d7df",
    "previous_hash": null,
  },
  {
    "filename": "000002.sql",
    "hash": "sha1:bddc1ead3310dc1c42cdc7f63537ebdff2e9fd7b",
    "previous_hash": "sha1:e00ec93314a423ee5cc68d1182ad52f16442d7df",
  },
  {
    "filename": "000003.sql",
    "hash": "sha1:2d248344ac299ebbad2aeba5bfec2ae3c3cb0a4f",
    "previous_hash": "sha1:bddc1ead3310dc1c42cdc7f63537ebdff2e9fd7b",
  },
]
`;

exports[`will run a migration with invalid hash if told to do so 2`] = `
[
  {
    "typname": "user_role",
    "value_count": "2",
  },
]
`;
